[package]
name = "arctic"
version = "0.1.0"
edition = "2025"
authors = ["Prathamesh Padiyar prathameshpadiyar@gmail.com"]
description = "CLI tool to send randomized data to API endpoints"
license = "MIT"
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
rand = "0.8.5"
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
